--- a/style.css
+++ b/style.css
@@ -167,34 +167,67 @@ img {
 	grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     grid-template-areas:
-	"websites-list a-img";
+		"websites-list a-img";
 	justify-content: space-between;
 	align-items: center;
 }
 
-.online-url .websites-list{
-	grid-area: websites-list;
-}
-
 .online-url .a-img{
 	grid-area: a-img;
-	justify-self: end;
 	width: 100%;
+	height: auto;
+	max-width: 100%;
+	object-fit: cover;
+	padding-bottom: 20px;
+	padding-left: 20px;
 }
 
 .online-url .a-img #a-img{
-	max-width: 100%;
-	align-self: center;
+	max-width: 90%;
+	justify-self: end;
 }
 
-.online-url .websites-list {
+/* .online-url {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
 	padding-top: 8%;
 	padding-bottom: 8%;
 	border-bottom: black solid 1px;
+} */
+
+.online-url .text-2online #no_two {
+	padding-right: 10px;
+	font-size: xx-large;
 }
+
+.online-url .text-2online #ONON {
+	font-size: 450%;
+}
+
+.online-url .text-2online {
+	border-bottom: black solid 1px;
+}
+
+.online-url .websites-list{
+	grid-area: websites-list;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.online-url .websites-url {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	padding-top: 6%;
+	padding-bottom: 6%;
+	border-bottom: black solid 1px;
+}
+
+.online-url .websites-url a{
+	color: black;
+	text-decoration: none;
+} 
   
 @media (min-width: 768px) {
 	.howto-text {
@@ -217,12 +250,24 @@ img {
 		margin-top: -15%; */
 	}
 	.online-url .a-img #a-img{
-		justify-content: center;
-		align-items: center;
+		/* justify-content: center;
+		align-items: center; */
 		position: relative;
-		max-width: clamp(80%, 60vw, 80%);
-		margin-top: clamp(0px, -10vh, -12%);
+		padding-left: 5%;
+		padding-right: 5%;
 	}
+}
+
+.row4{
+    background-color: #660099;
+    min-width: 0%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.row4 #row4{
+	width: calc(100% + 4rem);
+	margin: 0 -2rem;
 }
 
 @media (max-width: 768px) {
@@ -264,19 +309,17 @@ img {
 	.howto .fm-cities #FMFM {
 		font-size: 350%;
 	}
-
 	.online-url{
 		background-color: #ffcc00;
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-template-rows: auto auto;
 		grid-template-areas:
-		"a-img"
-		"websites-list";
+			"a-img"
+			"websites-list";
 		justify-content: center;
 	}
-
-	.online-url .a-img{
+	.online-url .a-img #a-img{
 		justify-self: center;
 		width: 100%;
 	}
@@ -287,6 +330,3 @@ img {
 		top: -32%;
 	} */
 }
-/* .head-container .now-playing .text-song{
-    
-} */
