--- a/style.css
+++ b/style.css
@@ -227,8 +227,59 @@ img {
 .online-url .websites-url a{
 	color: black;
 	text-decoration: none;
-} 
-  
+}
+
+.devices {
+	background-color: #ffcc00;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+		"dev-list dev-list"
+		"z-col1 z-col2";
+	justify-content: space-between;
+}
+
+.devices .dev-list {
+	grid-area: dev-list;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 20px;
+}
+
+.devices .dev-list .text-3dev {
+	border-bottom: black solid 1px;
+}
+
+.devices .dev-list .text-3dev #no_three {
+	padding-right: 10px;
+	font-size: xx-large;
+}
+
+.devices .dev-list .text-3dev #DEV {
+	font-size: 450%;
+}
+
+.devices .dev-list .dev-text {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	border-bottom: black solid 1px;
+}
+
+.devices .z-img{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: auto;
+	max-width: 100%;
+	object-fit: cover;
+	padding-bottom: 20px;
+	justify-content: space-between;
+}
+
 @media (min-width: 768px) {
 	.howto-text {
 		font-size: 10.36vw;
